--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install --upgrade pip
+            python3 -m pip install -U pip
             pip install -r requirements.txt
       - save_cache:
           paths:
