--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            apt install -y python3-venv
+            apt install -y python3-venv=3.8
             python3 -m venv venv
             . venv/bin/activate
             python3 -m pip install --upgrade pip
