--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,6 @@ jobs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  satimg-ML-workflow:
+  satellite-imageryML-workflow:
     jobs:
       - build 
