--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     
-    working_directory: ~/ad-forecasting-gcp
+    working_directory: ~/satellite-imgML-gcp
     
     steps:
       - checkout 
