--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,10 +54,10 @@ jobs:
       - run:
           name: deploy to app engine
           command: |
-            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account 352477506846-compute@developer.gserviceaccount.com --key-file=97c63be5e6bbd3a6fedfb31e535676c206dc4e3d
+            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account 352477506846-compute@developer.gserviceaccount.com --key-file=-
             gcloud --quiet config set project ${banded-equinox-353115}
             gcloud --quiet config set compute/zone ${europe-west1-b}
-            cd api-mlresponse && gcloud app deploy
+            cd Analytics-Applications-Engineering && gcloud app deploy
 
 
 
