--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,8 @@
-Runtime:python310
+runtime: python27       
+api_version: 1          
+threadsafe: true        
+
+handlers:               
+  - url: /.*            
+    script: main.app 
+    
