--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account banded-equinox-353115@appspot.gserviceaccount.com --key-file=-
             gcloud --quiet config set project ${banded-equinox-353115}
             gcloud --quiet config set compute/zone ${europe-west1-b}
-            cd Analytics-Applications-Engineering && gcloud app deploy
+            gcloud app deploy
 
 
 
