--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,8 +55,8 @@ jobs:
           name: deploy to app engine
           command: |
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account banded-equinox-353115@appspot.gserviceaccount.com --key-file=-
-            gcloud --quiet config set project ${banded-equinox-353115}
-            gcloud --quiet config set compute/zone ${europe-west1-b}
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
             gcloud app deploy
 
 
