--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,7 @@ jobs:
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account banded-equinox-353115@appspot.gserviceaccount.com --key-file=-
             gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
             gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-            pwd
-            cd Analytics-Applications-Engineering && gcloud app deploy
+            gcloud app deploy
 
 
 
