--- a/servicedev.yaml
+++ b/servicedev.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 runtime: python
-service: default
+service: dev
 env: flex
 entrypoint: gunicorn -b :$PORT main:app
 
